# resource-hunter

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SKILL.md  _meta.json  pyproject.toml
agents/: hermes.yaml  openclaw.yaml
docs/: MODULE_REGISTRY.md
local/: README.md
references/: architecture.md  sources.md
scripts/: hunt.py
scripts/quarry/: __init__.py  _cleanup.py  benchmark.py  cache.py  cli.py  common.py  engine.py  intent.py  jimaku.py  mirror_health.py  models.py  pan_probe.py  ranking.py  rendering.py  source_validation.py  subdl.py  subhd.py  video_core.py
scripts/quarry/sources/: __init__.py  annas.py  bangumi_moe.py  base.py  btdig.py  dmhy.py  ext_to.py  glodls.py  idope.py  knaben.py  libgen.py  limetorrents.py  panhunt.py  pansou.py  ps252035.py  solidtorrents.py  subsplease.py  torlock.py  torrentcsv.py  torrentgalaxy.py  torznab.py  tpb.py  upyunso.py  x1337.py  yts.py
scripts/resource_hunter/: __init__.py  cache.py  cli.py
scripts/resource_hunter/sources/: __init__.py  upyunso.py
tests/: test_cli.py  test_intent.py  test_mirror_health.py  test_precision.py  test_results.py  test_zero_config.py
