[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quarry"
version = "1.1.0"
description = "High-recall public resource discovery for agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT-0"
authors = [{ name = "mnbplus" }]
keywords = ["resource", "search", "torrent", "pan", "agent", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.8"]
perf = ["httpx>=0.27"]
pan = ["pycryptodome>=3.20"]
browser = ["playwright>=1.40"]
antibot = ["curl-cffi>=0.7"]

[project.urls]
Homepage = "https://github.com/mnbplus/quarry"
Repository = "https://github.com/mnbplus/quarry"
Issues = "https://github.com/mnbplus/quarry/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
